# TerrainSurfaceToolEditorPlugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  build_ninja.bat  build_oksygen_sdk.bat  local_paths.cmake.example
.svn/: wc.db
Content/: raise_terrain_to_surfaces_comp.basemat  terrain_brush_r32f_overwrite.basebrush  terrain_mask_r8_overwrite.basebrush
include/terrain_editor_plugin/: terrain_editor_plugin.h
source/: LandscapeSaveManager.cpp  LandscapeSaveManager.h  SurfaceRasterizer.cpp  SurfaceRasterizer.h  TerrainManipulator.cpp  TerrainManipulator.h  TerrainSurfaceToolEditorPlugin.cpp  TerrainSurfaceToolEditorPlugin.h  TerrainSurfaceToolEditorPlugin.json  TerrainToolPanel.cpp  TerrainToolPanel.h
source/core/: NodeTreeWalker.h  TerrainSurfaceToolEditorPlugin.cpp  TerrainSurfaceToolEditorPlugin.h  TerrainSurfaceToolEditorPlugin.json
source/landscape/: LandscapeSaveManager.cpp  LandscapeSaveManager.h
source/rasterizer/: SurfaceQuery.h  SurfaceRasterizer.cpp  SurfaceRasterizer.h
source/terrain/: BrushMaterialFactory.cpp  BrushMaterialFactory.h  DebugImageExporter.cpp  DebugImageExporter.h  TerrainBrushSettings.h  TerrainManipulator.cpp  TerrainManipulator.h  TerrainRasterPlanner.cpp  TerrainRasterPlanner.h
source/ui/: TerrainToolController.cpp  TerrainToolController.h  TerrainToolPanel.cpp  TerrainToolPanel.h
